# reports_csv

./: .gitignore  README.md  Taskfile.yml  main.py  pyproject.toml
.github/workflows/: tests.yml
src/: log_conf.py  parse_args.py
src/reports/: base.py  io_operation.py  register_reports.py
src/reports/type_reports/: performance.py
tests/: conftest.py  test_base.py  test_io_operation.py  test_parse_args.py  test_performance.py  test_register_reports.py
