[project]
name = "rating-tool-self"
version = "0.1.0"
description = ""
authors = [
    {name = "faiver90",email = "faiver90@gmail.com"}
]
readme = "README.md"
requires-python = ">=3.12"
dependencies = [
    "tabulate (>=0.9.0,<0.10.0)",
    "pytest (>=8.4.2,<9.0.0)",
]

[tool.poetry]
package-mode = false

[build-system]
requires = ["poetry-core>=2.0.0,<3.0.0"]
build-backend = "poetry.core.masonry.api"

[tool.pytest.ini_options]
python_files = ["tests.py", "test_*.py", "*_tests.py"]
addopts = """
    --maxfail=9999
    --disable-warnings
    -vv
    -s
    --color=yes
    --continue-on-collection-errors
"""
asyncio_mode = "auto"

[tool.ruff.lint]
select = ["E", "F", "I", "B", "UP"]
ignore = ["E501", "B008"]
fixable = ["ALL", "I"]
dummy-variable-rgx = "^(_+|(_+[a-zA-Z0-9_]*[a-zA-Z0-9]+?))$"

[tool.ruff.lint.per-file-ignores]
"__init__.py" = ["F401"]

[tool.ruff.format]
quote-style = "double"
indent-style = "space"
docstring-code-format = true
skip-magic-trailing-comma = false
line-ending = "auto"

[dependency-groups]
dev = [
    "ruff (>=0.14.1,<0.15.0)",
    "mypy (>=1.18.2,<2.0.0)"
]

[tool.mypy]
explicit_package_bases = true
ignore_missing_imports = true